--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-sidebar": "^3.0.2",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
